[package]
name = "flute-listener"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
cpal = "0.16.0"
directories = "6.0.0"
lazy_static = "1.5.0"
ratatui = "0.29.0"
rustfft = "6.4.0"
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
